[package]
name = "shoop"
version = "0.0.6-alpha"
authors = ["Jake McGinty <me@jake.su>"]
description = "Shoop is a high-speed encrypted file transfer tool reminiscent of scp. It uses SSH to bootstrap authentication and encryption, then uses UDT (a reliable protocol from the 2000s) instead of TCP (a reliable protocol from the 1970s)."
keywords = ["scp", "transfer", "encrypted", "secure", "file"]
build = "build.rs"
homepage = "https://github.com/mcginty/shoop"
repository = "https://github.com/mcginty/shoop"
readme = "README.md"
license = "MIT"

include = [
  "**/*.rs",
  "Cargo.toml",
]

[features]
nightly = []

[lib]
name = "shoop"
path = "src/lib.rs"

[[bin]]
name = "shoop"
path = "src/main.rs"

[build-dependencies]
rustc_version = "*"

[dependencies]
log = "^0.3"
clap = "^2"
unix-daemonize = "^0.1"
num-bigint = "^0.1"
num-traits = "^0.1"
byteorder = "^1"
rustc-serialize = "^0.3"
lazy_static = "^0.2"
ring = "^0.7"
time = "^0.1"
udt = "^0.2"
colored = "^1.4"
libc = "^0.2"
pbr = "^1.0.0-alpha"

[dev-dependencies]
rand = "^0.3"

[profile.release]
lto = true
panic = 'abort'
