[package]
name = "shoop"
version = "0.0.9-alpha"
authors = ["Jake McGinty <me@jake.su>"]
description = "Shoop is a high-speed encrypted file transfer tool reminiscent of scp. It uses SSH to bootstrap authentication and encryption, then uses UDT (a reliable protocol from the 2000s) instead of TCP (a reliable protocol from the 1970s)."
keywords = ["scp", "transfer", "encrypted", "secure", "file"]
build = "build.rs"
homepage = "https://github.com/mcginty/shoop"
repository = "https://github.com/mcginty/shoop"
readme = "README.md"
license = "MIT"

include = [
  "**/*.rs",
  "Cargo.toml",
]

[features]
nightly = []

[lib]
name = "shoop"
path = "src/lib.rs"

[[bin]]
name = "shoop"
path = "src/main.rs"

[build-dependencies]
rustc_version = "^0.2"

[dependencies]
log = "^0.3"
clap = "^2"
unix-daemonize = "^0.1"
byteorder = "^1"
hex = "^0.2"
lazy_static = "^0.2"
ring = "^0.9.4"
time = "^0.1"
udt = "^0.2"
colored = "^1.4"
libc = "^0.2"
pbr = "^1.0.0-alpha"

[dev-dependencies]
rand = "^0.3"

[profile.release]
lto = true
panic = 'abort'
